[gd_scene load_steps=12 format=3 uid="uid://dnqmxk4l2gafb"]

[ext_resource type="Script" path="res://Scripts/Dash.gd" id="1_a28e5"]
[ext_resource type="Texture2D" uid="uid://dtemoatu5v34" path="res://Assets/dust.png" id="2_xmxb5"]
[ext_resource type="Texture2D" uid="uid://bb6e7ow4fuidk" path="res://Assets/circle.png" id="3_yrov6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_c85hs"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_2m7ip"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ruybd"]
curve = SubResource("Curve_2m7ip")

[sub_resource type="Gradient" id="Gradient_sddub"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_45u06"]
gradient = SubResource("Gradient_sddub")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ybqmo"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = 0.1
angle_max = 360.0
scale_min = 3.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_45u06")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("CurveTexture_ruybd")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1l81a"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_13o8k"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 35.0
initial_velocity_max = 35.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = 0.1
angle_max = 360.0
scale_min = 5.0
scale_max = 6.0
color_ramp = SubResource("GradientTexture1D_45u06")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("CurveTexture_ruybd")

[node name="Dash" type="Node2D"]
script = ExtResource("1_a28e5")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="DustTrail" type="GPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_c85hs")
scale = Vector2(2.62793, 2.62793)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_ybqmo")
texture = ExtResource("2_xmxb5")
lifetime = 0.8
one_shot = true
explosiveness = 0.6

[node name="DustBurst" type="GPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_1l81a")
scale = Vector2(2.62793, 2.62793)
emitting = false
amount = 14
process_material = SubResource("ParticleProcessMaterial_13o8k")
texture = ExtResource("3_yrov6")
lifetime = 1.5
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
